@@ -1,3 +1,8 @@
+2002-11-13  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b28
+
+	* Rolled in Joan McGalliard's patch to allow users to add captions
+	  when uploading photos.  Thanks, Joan!
+
 2002-11-12  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b27
 
 	* Tested the XP Publishing code, made a few tweaks to make it a bit
